change the getFirst to get by index